fixed align on company logo section

--- a/assets/sass/responsive.scss
+++ b/assets/sass/responsive.scss
@@ -295,6 +295,13 @@
         margin-top: 70%;
     }
 }
+@media screen and (max-width: 496px) {
+    .company-logo {
+        .company-logo-item {
+            text-align: left;
+        }
+    } 
+}
 @media screen and (max-width: 464px) {
     .services-area {
         margin-top: 89%;
